[package]
name = "rust-esp-blink"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp-hal-common = { version = "0.12.0", features = ["esp32"]}
embassy-time   = { version = "0.1.3",  features = ["nightly"], optional = true }
esp32-hal      = "0.15.0"

[dev-dependencies]
aes                = "0.8.3"
critical-section   = "1.1.2"
crypto-bigint      = { version = "0.5.3", default-features = false }
embassy-executor   = { version = "0.3.0", features = ["nightly"] }
embassy-sync       = "0.2.0"
embedded-graphics  = "0.8.1"
embedded-hal       = "0.2.7"
embedded-io-async  = "0.5.0"
esp-alloc          = "0.3.0"
esp-backtrace      = { version = "0.8.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-hal-smartled   = { version = "0.5.0", features = ["esp32"]}
esp-println        = { version = "0.6.0", features = ["esp32", "log"] }
heapless           = "0.7.16"
lis3dh-async       = "0.8.0"
sha2               = { version = "0.10.7", default-features = false}
smart-leds         = "0.3.0"
ssd1306            = "0.8.1"
static_cell        = { version = "1.2.0", features = ["nightly"] }

[features]
default            = ["rt", "vectored", "xtal40mhz"]
async              = ["esp-hal-common/async"]
bluetooth          = []
debug              = ["esp-hal-common/debug"]
defmt              = ["esp-hal-common/defmt"]
eh1                = ["esp-hal-common/eh1"]
log                = ["esp-hal-common/log"]
rt                 = []
ufmt               = ["esp-hal-common/ufmt"]
vectored           = ["esp-hal-common/vectored"]
xtal40mhz          = ["esp-hal-common/esp32_40mhz"]
xtal26mhz          = ["esp-hal-common/esp32_26mhz"]

# Embassy support
embassy                    = ["esp-hal-common/embassy"]
embassy-time-timg0         = ["esp-hal-common/embassy-time-timg0", "embassy-time/tick-hz-1_000_000"]
embassy-executor-thread    = ["esp-hal-common/embassy-executor-thread"]
embassy-executor-interrupt = ["esp-hal-common/embassy-executor-interrupt"]

# PSRAM support
psram     = []
psram_2m  = ["esp-hal-common/psram_2m", "psram"]
psram_4m  = ["esp-hal-common/psram_4m", "psram"]
psram_8m  = ["esp-hal-common/psram_8m", "psram"]


# [build-dependencies]
# cargo-espflash     = "0.3"